Implement the Transfer Ethereum feature

--- a/app/src/main/res/layout/navigation_toolbar.xml
+++ b/app/src/main/res/layout/navigation_toolbar.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/toolbar">
+    android:background="@color/toolbar"
+    android:theme="@style/ToolbarTheme">
 
     <TextView
         android:id="@+id/toolbarTitle"
