--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -35,7 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                tools:text="0.1234" />
+                android:text="0.0000" />
 
             <TextView
                 style="@style/TextView"
@@ -57,10 +57,10 @@
         android:id="@+id/ivEthereum"
         android:layout_width="@dimen/_50sdp"
         android:layout_height="@dimen/_50sdp"
-        android:layout_marginStart="@dimen/_3sdp"
         android:layout_marginTop="@dimen/_50sdp"
         android:src="@drawable/ic_ethereum"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/llWalletHeader" />
 
     <TextView
