--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,11 +12,11 @@
         <item name="android:gravity">center_horizontal|bottom</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/_13ssp</item>
+        <item name="android:includeFontPadding">false</item>
     </style>
 
     <style name="WalletMenuItem" parent="TextView">
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_weight">1</item>
         <item name="android:drawablePadding">@dimen/_4sdp</item>
         <item name="android:drawableTint">@color/white</item>
     </style>
