--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,13 @@
         <item name="android:drawableTint">@color/white</item>
     </style>
 
+    <style name="BalanceTextView">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">@dimen/_25ssp</item>
+        <item name="android:text">0.00</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
     <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
         <item name="colorControlNormal">@color/white</item>
     </style>
