--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#d81b60</color>
     <color name="toolbar">#0a2b38</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="transparent_black">#4D000000</color>
     <color name="light_gray">#d3d3d3</color>
     <color name="eth_balance">#eab42f</color>
 </resources>
